# Nothing-Track

./: .gitignore  CMakeLists.txt  README.md  convert_assets.py
include/: app_state.h  ble_monitor.h  spp_client.h  tray_app.h
src/: ble_monitor.cpp  main.cpp  resources.rc  spp_client.cpp  tray_app.cpp  tray_app_custom.cpp
